# WhisperSTT

./: .gitattributes  .gitignore
WhisperAndroid/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
WhisperAndroid/app/: build.gradle.kts
WhisperAndroid/app/src/main/: AndroidManifest.xml
WhisperLinux/: .gitignore  README.md  build_linux.sh  whisper_cli.py
WhisperLinux/native/: CMakeLists.txt  whisper_cli.cpp
WhisperiOS/: AppViewModel.swift  AudioRecorder.swift  Benchmarking.swift  ContentView.swift  ModelCatalog.swift  NexaEngine.swift  PerformanceMetrics.swift  RunAnywhereEngine.swift  STTStreamingEngine.swift  StreamingTranscriber.swift  TTSService.swift  WhisperEngine.swift  WhisperKitEngine.swift  WhisperiOSApp.swift
WhisperiOS.xcodeproj/: project.pbxproj
WhisperiOS.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
WhisperiOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
WhisperiOS/Models/benchmark-clips/: SOURCES.md  earnings22_1_4482311_3_62.txt  fleurs_ja_1837_clip4.txt  fleurs_zh_1883_clip5.txt
WhisperiOS/Models/nexa/: README.md
WhisperiOS/Models/nexa/parakeet-tdt-0.6b-v3-ane/: .keep  README.md  nexa.manifest  parakeet_emb.npy  pos_emb_4_3.npy  tokenizer.vocab
WhisperiOS/Models/runanywhere/: README.md
WhisperiOS/Models/tokenizers/: README.md
WhisperiOS/Models/whisperkit-coreml/: README.md
WhisperiOS/Resources/: Info.plist  LaunchScreen.storyboard
scripts/: bootstrap_android_models.sh  bootstrap_ios_models.sh
(+35 files in other folders)
